--- a/templates/example.html
+++ b/templates/example.html
@@ -1,1 +1,9 @@
-{{ arg }}
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container">
+    <div class="alert alert-primary" role="alert">
+        {{ arg }}
+    </div>
+</div>
+{% endblock %}
