--- a/templates/index.html
+++ b/templates/index.html
@@ -19,4 +19,36 @@
         </ul>
     </div>
 </nav>
+
+<main class="container" role="main">
+    {% for post in posts %}
+    <div class="card mt-3 mb-3">
+        <div class="card-body">
+            <div class="d-flex justify-content-between">
+                <h3>{{ post.title }}</h3>
+                <p>{{ post.created_at }}</p>
+            </div>
+            <p>{{ post.content }}</p>
+            <div class="d-flex justify-content-end">
+                <a href="#" class="btn btn-primary mr-2" role="button" aria-pressed="true">Update</a>
+                <a href="#" class="btn btn-danger" role="button" aria-pressed="true">Delete</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center mt-4">
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
+</main>
 {% endblock %}
