--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <div class="card mt-3 mb-3">
         <div class="card-body">
             <div class="d-flex justify-content-between">
-                <h3>{{ post.title }}</h3>
+                <h3><a href="{% url 'detail' post.id %}" class="text-dark">{{ post.title }}</a></h3>
                 <p>{{ post.created_at }}</p>
             </div>
             <p>{{ post.content }}</p>
