--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,12 @@
                 <p>{{ post.created_at }}</p>
             </div>
             <p>{{ post.content }}</p>
+            {% if post.poster == request.user %}
             <div class="d-flex justify-content-end">
                 <a href="#" class="btn btn-primary mr-2" role="button" aria-pressed="true">Update</a>
                 <a href="#" class="btn btn-danger" role="button" aria-pressed="true">Delete</a>
             </div>
+            {% endif %}
         </div>
     </div>
     {% endfor %}
