--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             {% if post.poster == request.user %}
             <div class="d-flex justify-content-end">
                 <a href="#" class="btn btn-primary mr-2" role="button" aria-pressed="true">Update</a>
-                <a href="#" class="btn btn-danger" role="button" aria-pressed="true">Delete</a>
+                <a href="{% url 'delete' post.id %}" class="btn btn-danger" role="button" aria-pressed="true">Delete</a>
             </div>
             {% endif %}
         </div>
