--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,11 @@
 </nav>
 
 <main class="container" role="main">
+    <div class="p-3">
+        <a class="btn btn-primary btn-lg" href="{% url 'create' %}" role="button">Create</a>
+    </div>
     {% for post in posts %}
-    <div class="card mt-3 mb-3">
+    <div class="card mb-3">
         <div class="card-body">
             <div class="d-flex justify-content-between">
                 <h3><a href="{% url 'detail' post.id %}" class="text-dark">{{ post.title }}</a></h3>
