--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 
 {% block content %}
 <form method="POST" class="form-signin">
     {% csrf_token %}
     <div class="text-center mb-4">
-        <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
     </div>
 
     {% if error %}
@@ -16,6 +16,12 @@
     {% endif %}
 
     <div class="form-label-group">
+        <label for="inputUsername">Username</label>
+        <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required
+            autofocus>
+    </div>
+
+    <div class="form-label-group">
         <label for="inputEmail">Email address</label>
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required>
     </div>
@@ -25,9 +31,9 @@
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
     </div>
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
     <div class="text-center m-4">
-        <p>Create your account. <a href="{% url 'signup' %}">Signup</a></p>
+        <p>Already have a account? <a href="{% url 'signin' %}">Signin</a></p>
       </div>
     <p class="mt-2 mb-3 text-muted text-center">&copy; 2017-2020</p>
 </form>
