--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -1,4 +1,9 @@
 {% extends 'account/base.html' %}
+{% load static %}
+
+{% block link %}
+<link rel="stylesheet" href="{% static 'style.css' %}">
+{% endblock %}
 
 {% block content %}
 <form method="POST" class="form-signin">
@@ -28,7 +33,7 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     <div class="text-center m-4">
         <p>Create your account. <a href="{% url 'signup' %}">Signup</a></p>
-      </div>
+    </div>
     <p class="mt-2 mb-3 text-muted text-center">&copy; 2017-2020</p>
 </form>
 {% endblock %}
