--- a/templates/post/create.html
+++ b/templates/post/create.html
@@ -25,11 +25,11 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="TitleInput">Title</label>
-            <input type="text" class="form-control" id="titleInput" name="title">
+            <input type="text" class="form-control" id="titleInput" name="title" required>
         </div>
         <div class="form-group">
             <label for="contentTextarea">Content</label>
-            <textarea class="form-control" id="contentTextarea" name="content" rows="3"></textarea>
+            <textarea class="form-control" id="contentTextarea" name="content" rows="3" required></textarea>
         </div>
         <div class="form-group">
             <label for="imageInput">Image</label>
