--- a/templates/post/update.html
+++ b/templates/post/update.html
@@ -25,11 +25,11 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="TitleInput">Title</label>
-            <input type="text" class="form-control" id="titleInput" name="title" value="{{ post.title }}">
+            <input type="text" class="form-control" id="titleInput" name="title" value="{{ post.title }}" required>
         </div>
         <div class="form-group">
             <label for="contentTextarea">Content</label>
-            <textarea class="form-control" id="contentTextarea" name="content" rows="3">{{ post.content }}</textarea>
+            <textarea class="form-control" id="contentTextarea" name="content" rows="3" required>{{ post.content }}</textarea>
         </div>
         <div class="form-group">
             <label for="imageInput">Image</label>
